recursion.lessons.recursion.koch.Koch.scala.error
Koch:22: error: ';' expected but identifier found.
  droite(120)
  ^